--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 		</div>
 		<script type="text/javascript" src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
 		<script type="text/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-		<!-- <script type="text/javascript" src="/scripts/app.js"></script> -->
-    <script type="text/javascript" src="/scripts/es6-arrow-function-2.js"></script>
+		<script type="text/javascript" src="/scripts/app.js"></script>
 	</body>
 </html>
