installed and configured webpack

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,6 @@
 		<div id="app">
 			
 		</div>
-		<script type="text/javascript" src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
-		<script type="text/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-		<script type="text/javascript" src="/scripts/app.js"></script>
+		<script type="text/javascript" src="/bundle.js"></script>
 	</body>
 </html>
